--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,6 @@
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - main
 
@@ -17,6 +16,18 @@ variables:
         command: test
         projects: '*/*Tests/.csproj'
         arguments: '--configuration $(buildConfiguration)'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      inputs:
+       command: publish
+       publishWebProjects: false
+       projects: 'src/SimpleAPI/SimpleAPI.csproj'
+      arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: true
+      
+    - task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
